Remove unnecessary boxing.  Remove redundant else branches in if/else statements.